objects/Q9__Set_Active_Partner_Result__e.object
<CustomObject>
    <description>The success/failure result of the Metadata Deployment to update the &quot;Active&quot; status of DevOps partner records.</description>
    <fields>
        <fullName>Q9__Done__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Metaadata Deployment job done?</description>
        <label>Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q9__Error_Message__c</fullName>
        <description>Error Message from the Metadata Deployment job if not successful.</description>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q9__Job_Id__c</fullName>
        <description>Id of the Metadata Deployment job</description>
        <label>Job Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q9__Success__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was the Metadata Deployment job successful?</description>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <label>Set Active Partner Result (DEPRECATED)</label>
    <pluralLabel>Set Active Partner Results</pluralLabel>
</CustomObject>